# drone-tracker-system

./: .gitignore  CLAUDE.md  README.md  add_active_flag.py  add_auto_target_debug.py  add_center_freeze.py  add_center_lock_debug.py  add_filter_flags.py  add_manual_labels.py  add_selection_priority.py  add_snap.py  add_sticky_center_lock.py  add_target.py  add_tracking.py  add_valid_flag.py  clamp_head_motion_apply.py  connect_target_filter.py  fix_all_indent.py  fix_indent.py  hard_center_manual.py  insert_target_flags.py  integrate_head_controller.py  integrate_operator_slots.py  integrate_smoother_step1.py  integrate_smoother_step2.py  integrate_target_filter.py  patch_detect.py  patch_filter.py  patch_narrow_motion.py  patch_tracker.py  patch_tracker2.py  patch_tracking_fix.py  reduce_camera_step.py  relax_far_drone_filter.py  requirements.txt  set_colors.py  set_colors_safe.py  set_track_colors.py  smooth_patch.py  soften_target_filter.py  (+10 more)
config/: bytetrack_fast_acquire.yaml  config.yaml  lab_sim.yaml
cpp/: CMakeLists.txt  README.md
cpp/app/: main.cpp  poc_inference.cpp
cpp/include/dtracker/: dashboard.hpp  inference.hpp  kalman.hpp  local_tracker.hpp  lock_pipeline.hpp  multi_target_tracker.hpp  narrow_tracker.hpp  target_manager.hpp  telemetry.hpp  track.hpp  types.hpp
cpp/include/dtracker/io/: file_frame_source.hpp  frame_source.hpp  mock_ptz_controller.hpp  ptz_controller.hpp
cpp/src/: dashboard.cpp  inference.cpp  kalman.cpp  local_tracker.cpp  lock_pipeline.cpp  multi_target_tracker.cpp  narrow_tracker.cpp  target_manager.cpp  telemetry.cpp
cpp/src/io/: file_frame_source.cpp
cpp/tests/: test_framework.hpp  test_io_hal.cpp  test_kalman.cpp  test_lock_pipeline.cpp  test_main.cpp  test_mtt.cpp  test_narrow_tracker.cpp  test_target_manager.cpp
docs/: cvat_setup.md  d1_summary_2026_04_25.md  datasets_v4.md  drone_detection_resources.md  dual_camera_hal.md  env_setup.md  labelling_guide.md
docs/v4_validation/: README.md
src/: main.py
src/core/: app.py  dashboard.py  detector.py  fusion.py  head_controller.py  head_motion_test.py  local_target_tracker.py  lock_pipeline.py  manifest_rules.py  metrics.py  models.py  multi_target_tracker.py  narrow_box_smoother.py  narrow_cv_tracker.py  narrow_handoff.py  narrow_tracker.py  operator_slots.py  optical_flow_fallback.py  owner_coordinator.py  patch_recording_and_shots_powershell.ps1  patch_recording_powershell.ps1  run_reporting.py  stable_registry.py  target_filter.py  target_manager.py  telemetry.py  template_fallback.py  ui.py  utils.py  wide_tracker.py
src/core/_retired/: head_controller.py
src/core/channels/: __init__.py  owner_coordinator.py  wide_channel.py
src/core/channels_wip/: app.py  models.py  narrow_channel.py  narrow_tracker.py  target_manager.py
src/sim/: simulator.py
test_env/: run_lab.ps1
tools/: _antiuav_diag.py  _build_v3_dataset.py  _build_v4_dataset.py  _label_track_init.py  _migrate_pack.ps1  _split_train_val.py  _synth_camera_motion.py  _v4_validation_png.py  bench_cpu_vs_dml.py  compare_telemetry.py  export_v3_to_onnx.py  export_v3_to_onnx_fp16.py  label.sh
training/: README.md  colab_setup.ipynb  colab_v4_train.ipynb  train_v2.py  train_v3.py  train_v4.py  train_v4_both.sh
training/v2/: data.yaml
training/v3/: data.yaml
training/v4/: data.yaml
